# opencode-tux

./: .gitignore  CLAUDE.md  Makefile
architecture-discussion/: 01-python-batch-architecture.md  02-verification-results.md  03-conversion-deep-dive.md  04-qwen-opencode-results.md
architecture-discussion/python-batch/: pyproject.toml
architecture-discussion/python-batch/src/batch/: __init__.py  base.py  cli.py  db.py  log.py  metrics.py
architecture-discussion/python-batch/src/common/: __init__.py  constants.py
architecture-discussion/python-batch/src/services/: __init__.py  equity_ingest.py  ingest.py  market_analytics.py  orchestrator.py  portfolio_processor.py  report.py  transform.py  validate.py
architecture-discussion/python-batch/tests/: CONVERSION_REPORT.md  README.md  test_pipeline_integration.py  test_qwen_equity_ingest.py  test_qwen_market_analytics.py  test_qwen_portfolio_processor.py  test_services.py
config/: ubbconfig.txt
docs/: PROC_SERVICES_REFERENCE.md  oraclesqldevmcp.md  walkthrough.md
include/: atmi.h  sqlca.h  userlog.h
pc/: batch_analytics.pc  batch_comprehensive_risk.pc  batch_enrichment.pc  batch_equity_ingest.pc  batch_equity_orchestrator.c  batch_equity_report.pc  batch_equity_transform.pc  batch_equity_validate.pc  batch_ingest.pc  batch_market_analytics.pc  batch_orchestrator.c  batch_portfolio_processor.pc  batch_report.pc  batch_transform.pc  batch_validate.pc
scripts/: capture_snapshots.py  fetch_data.py  gen_eod_data.py  preproc.py  run_batch.sh  turso_bridge.py  verify_output.py
snapshots/: all.expected  risk.expected  (+3 more)
(+4 files in other folders)
